--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,19 +42,19 @@
   --animate-marquee: marquee var(--duration) infinite linear;
   --animate-marquee-vertical: marquee-vertical var(--duration) linear infinite;
   @keyframes marquee {
-  from {
-    transform: translateX(0);
+    from {
+      transform: translateX(0);
     }
-  to {
-    transform: translateX(calc(-100% - var(--gap)));
+    to {
+      transform: translateX(calc(-100% - var(--gap)));
     }
   }
   @keyframes marquee-vertical {
-  from {
-    transform: translateY(0);
+    from {
+      transform: translateY(0);
     }
-  to {
-    transform: translateY(calc(-100% - var(--gap)));
+    to {
+      transform: translateY(calc(-100% - var(--gap)));
     }
   }
 }
@@ -167,4 +167,10 @@ html {
   ::-webkit-scrollbar-thumb:hover {
     background: linear-gradient(#00bba4, #00bba4, #00bba4, #00bba4);
   }
+}
+
+.darkveil-canvas {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
